--- a/pagina2.html
+++ b/pagina2.html
@@ -10,10 +10,35 @@
   <body>
     <header>
       <div class="caixa">
-        <h1> <img src="logojpg" alt="logo da barbearia alura"></h1>
-
+        <h1> <img src="logo.jpg" alt="logo da barbearia alura"></h1>
+        <nav>
+          <ul>
+            <li> <a href="pagina.html"> Home</a></li>
+            <li> <a href="produtos.html"> Produtos</a></li>
+            <li> <a href="pagina2.html"> Contatos</a></li>
+          </ul>
+        </nav>
       </div>
     </header>
+
+    <main>
+      <h2>Contato</h2>
+      <form>
+        <label for="nome"> Nome e Sobrenome</label>
+        <input type="text" id="nome" class="inputpadrao" required>
+        <br>
+
+        <label for="email"> Email</label>
+        <input type="email" id="email" class="inputpadrao" required>
+        <br>
+        <label for="telefone" id="telefone"> Telefone</label>
+        <input type="tel" id="telefone" class="inputpadrao" required>
+        <br>
+        <label for="mensagem"> Mensagem</label>
+        <textarea rows="10" cols="70" id="mensagem" class="inputpadrao" required></textarea>
+
+      </form>
+    </main>
 
   </body>
 </html>
